--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
+    <link href="css/addition.css" rel="stylesheet">
 
   </head>
 
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">Kappa Consulting</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +44,7 @@
               <a class="nav-link js-scroll-trigger" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#experience">experience</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -59,12 +59,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Your Favorite Source of Free Bootstrap Themes</strong>
+              <strong>Kappa Consulting</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+            <p class="strong mb-5">Process Safety <small><i class="fas fa-circle fa-xs"></i></small> Engineering <small><i class="fas fa-circle fa-xs"></i></small> Data Analysis</p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -75,10 +75,12 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">We can find a solution.</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded mb-4">Kappa Consulting is an engineering, safety, and data anlaysis consulting company based in Tulsa, OK. We have done work all over the world on a wide variety of plants and processes</p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">
+              What we do
+            </a>
           </div>
         </div>
       </div>
@@ -97,137 +99,268 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <i class="fas fa-4x fa-book-open text-primary mb-3 sr-icons"></i>
+              <h5 class="mb-3">Process Safety Management</h5>
+              <ul class="text-muted text-left mb-0">
+                <li>OSHA's PSM program development</li>
+                <li>Safety Integrity Level (SIL) Allocation</li>
+                <li>SIL verifcation</li>
+                <li>Auditing</li></ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-paper-plane text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <i class="fa fa-4x fa-fire text-primary mb-3 sr-icons"></i>
+              <h5 class="mb-3">Hazard Analysis</h5>
+              <ul class="text-muted text-left mb-0">
+                <li>Process Hazard Analysis (PHA)</li>
+                <li>Hazard and Operability Study (HAZOP)</li>
+                <li>Layer of Protection Analysis (LOPA)</li>
+                <li>Hazard (fire and explosion) modeling</li></ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <i class="fas fa-4x fa-microchip text-primary mb-3 sr-icons"></i>
+              <h5 class="mb-3">Engineering Consulting</h5>
+              <ul class="text-muted text-left mb-0">
+                <li>Legal Expert</li>
+                <li>PSV design</li>
+                <li>Management of Change</li>
+                <li>Incident Investigation</li>
+                <li>Code Review</li>
+                <li>SIS design</li></ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-drafting-compass text-primary mb-3 sr-icons"></i>
+              <h5 class="mb-3">Data Analysis</h5>
+              <ul class="text-muted text-left mb-0">
+                <li>Hazard Range visualization</li>
+                <li>Failure rate and mechanical integrity determination</li>
+                <li>Data visualization</li>
+                <li>Machine Learning</li></ul>
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="p-0" id="portfolio">
+    <section class="p-0" id="experience">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading">Experience</h2>
+            <hr class="my-4">
+          </div>
+        </div>
+      </div>
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+          <div class="col-lg-4 col-xs-12">
+            <div class="portfolio-box">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Oil and Gas Experience
+                  </div>
+                  <div class="project-category">
+                    <table>
+                      <tr>
+                        <td>
+                          <ul> 
+                            <li>Refineries</li>
+                            <li>Gas and liquid pipeline systems</li>
+                            <li>LNG terminals</li>
+                            <li>Polyethylene production</li>
+                            <li>NGL plants</li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul>
+                            <li>Well and cavern storage</li>
+                            <li>LPG holding facilities</li>
+                            <li>Ethane fractionation</li>
+                            <li>Tank farms</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
-            </a>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+            <div class="portfolio-box">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Plant and Process Experience
+                  </div>
+                  <div class="project-category">
+                    <table>
+                      <tr>
+                        <td>
+                          <ul> 
+                            <li>Air Separation</li>
+                            <li>Hydrogen fueling stations</li>
+                            <li>Chemical plants</li>
+                            <li>Hydrogen partial oxidation</li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul>
+                            <li>Carbon Dioxide</li>
+                            <li>Liquid Hydrogen bulk supply</li>
+                            <li>Cylinder, trailer, and railcar filling</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
-            </a>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+            <div class="portfolio-box">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Process Safety Mangement
+                  </div>
+                  <div class="project-category">
+                    <table>
+                      <tr>
+                        <td>
+                          <ul> 
+                            <li>OSHA PSM program setup</li>
+                            <li>Corporate PSM guidance development</li>
+                            <li>Corporate Risk Matrix Development</li>
+
+                          </ul>
+                        </td>
+                        <td>
+                          <ul>
+                            <li>PSM Auditing</li>
+                            <li>Layer of Protection Anlaysis Facilitation</li>
+                            <li>LOPA procedure develipoment
+SIL Allocation</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
-            </a>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+            <div class="portfolio-box">
               <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Hazard Analysis
+                  </div>
+                  <div class="project-category">
+                    <table>
+                      <tr>
+                        <td>
+                          <ul> 
+                            <li>HAZOP and PHA facilitation</li>
+                            <li>Fire, Explosion, and flammable and toxic vapor dispersion modeling</li>
+                            <li>HAZOP and PHA procedure development</li>
+
+                          </ul>
+                        </td>
+                        <td>
+                          <ul>
+                            <li>API 752 and 753 Facility Siting and Buildng Siting Studies</li>
+                            <li>Quantitative Risk  Analysis to determine compliance with corporate risk criteria</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
-            </a>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+            <div class="portfolio-box">
               <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Engineering Consulting
+                  </div>
+                  <div class="project-category">
+                    <table>
+                      <tr>
+                        <td>
+                          <ul> 
+                            <li>PSV and flare header design</li>
+                            <li>Management of Change Engineering Review</li>
+                            <li>Legal case support</li>
+                            <li>Tier 1 and Tier 2 incident investigation</li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul>
+                            <li>Code Reviews for multiple NFPA, API, and CGA relvant processes</li>
+                            <li>PSV design and SIS design procedure development</li>
+                            <li>SIL verificaiton</li>
+                            <li>SIS design to meet specified SIL requirement</li>
+                          </ul>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
-            </a>
+            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+            <div class="portfolio-box">
               <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
                   <div class="project-name">
-                    Project Name
+                    Data Analysis
+                  </div>
+                  <div class="project-category">
+                    <table>
+                      <tr>  
+                        <td>
+                          <ul> 
+                            <li>Hazard Range visualization</li>
+                            <li>Failure rate calculation</li>
+                            <li>Mechanical Integrity determination</li>
+                          </ul>
+                        </td>
+                        <td>
+                          <ul>
+                            <li>Proof Test interval determination</li>
+                            <li>Fault tree visualization</li>
+                            <li>Machine Learning</li>
+                            <li>Website scraping, data preparation, and analysis</li>
+
+                          </ul>
+                        </td>
+                      </tr>
+                    </table>
                   </div>
                 </div>
               </div>
-            </a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="bg-dark text-white">
-      <div class="container text-center">
-        <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
       </div>
     </section>
 
@@ -235,20 +368,20 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
+            <h2 class="section-heading">Let's Get In Touch.</h2>
             <hr class="my-4">
-            <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p class="mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible.</p>
           </div>
         </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-            <p>123-456-6789</p>
+            <p>+1-918-640-1377</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+            <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+              <a href="mailto:kmwerts@gmail.com">kmwerts@gmail.com</a>
             </p>
           </div>
         </div>
