--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-4x fa-microchip text-primary mb-3 sr-icons"></i>
+              <i class="fa fa-4x fa-drafting-compass text-primary mb-3 sr-icons"></i>
               <h5 class="mb-3">Engineering Consulting</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Legal Expert</li>
@@ -134,7 +134,7 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-drafting-compass text-primary mb-3 sr-icons"></i>
+              <i class="far fa-4x fa-chart-bar text-primary mb-3 sr-icons"></i>
               <h5 class="mb-3">Data Analysis</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Hazard Range visualization</li>
