--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We can find a solution.</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">RYSK Egineering is an engineering, safety, and data anlaysis consulting company based in Tulsa, OK. We have done work all over the world on a wide variety of plants and processes</p>
+            <p class="text-faded mb-4">RYSK Engineering is an engineering, safety, and data analysis consulting company based in Tulsa, OK. We have done work all over the world on a wide variety of plants and processes.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">
               What we do
             </a>
