--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>RYSK Engineering</title>
+    <title>RYSK Consulting</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">RYSK Engineering</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">RYSK Consulting</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>RYSK Engineering</strong>
+              <strong>RYSK Consulting</strong>
             </h1>
             <hr>
           </div>
@@ -77,7 +77,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We can find a solution.</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">RYSK Engineering is an engineering, safety, and data analysis consulting company based in Tulsa, OK. We have done work all over the world on a wide variety of plants and processes.</p>
+            <p class="text-faded mb-4">RYSK Consulting is an engineering, safety, and data analysis consulting company based in Tulsa, OK. We have done work all over the world on a wide variety of plants and processes.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">
               What we do
             </a>
