--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
+            <div class = "boxed">
             <p class="strong mb-5">Process Safety <small><i class="fas fa-circle fa-xs"></i></small> Engineering <small><i class="fas fa-circle fa-xs"></i></small> Data Analysis</p>
+            </div>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
