changed tiles for easier reading

--- a/index.html
+++ b/index.html
@@ -160,46 +160,10 @@
       </div>
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-xs-12">
-            <div class="portfolio-box">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-name">
-                    Oil and Gas Experience
-                  </div>
-                  <div class="project-category">
-                    <table>
-                      <tr>
-                        <td>
-                          <ul> 
-                            <li>Refineries</li>
-                            <li>Gas and liquid pipeline systems</li>
-                            <li>LNG terminals</li>
-                            <li>Polyethylene production</li>
-                            <li>NGL plants</li>
-                          </ul>
-                        </td>
-                        <td>
-                          <ul>
-                            <li>Well and cavern storage</li>
-                            <li>LPG holding facilities</li>
-                            <li>Ethane fractionation</li>
-                            <li>Tank farms</li>
-                          </ul>
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-box">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-sm-6 project-div">
                   <div class="project-name">
                     Plant and Process Experience
                   </div>
@@ -208,97 +172,58 @@
                       <tr>
                         <td>
                           <ul> 
-                            <li>Air Separation</li>
-                            <li>Hydrogen fueling stations</li>
-                            <li>Chemical plants</li>
-                            <li>Hydrogen partial oxidation</li>
+                            <li>Refineries and tank farms</li>
+							<li>LNG, NGL, ethane, and LPG plants</li>
+							<li>Polyethylene production</li>
+							<li>Air Separation</li>
                           </ul>
                         </td>
                         <td>
                           <ul>
-                            <li>Carbon Dioxide</li>
-                            <li>Liquid Hydrogen bulk supply</li>
-                            <li>Cylinder, trailer, and railcar filling</li>
+                            <li> Hydrogen and Carbon Monoxide plants </li>
+							<li>Carbon Dioxide and ammonia</li>
+							<li>Pipelines and cylinder, trailer, and railcar facilities</li>
+							<li>Well and cavern storage</li>
                           </ul>
                         </td>
                       </tr>
                     </table>
                   </div>
-                </div>
-              </div>
-            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-box">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
+              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-sm-6 project-div">
                   <div class="project-name">
-                    Process Safety Mangement
+                    Process Safety Management
                   </div>
                   <div class="project-category">
                     <table>
                       <tr>
                         <td>
                           <ul> 
-                            <li>OSHA PSM program setup</li>
-                            <li>Corporate PSM guidance development</li>
-                            <li>Corporate Risk Matrix Development</li>
-
+                            <li>OSHA PSM and EPA RMP programs</li>
+                            <li>Risk Matrix development</li>
+                            <li>Layer of Protection Anlaysis and SIL allocation</li>
+                            <li>API 752 and 753 Facility Siting Studies</li>
                           </ul>
                         </td>
                         <td>
                           <ul>
-                            <li>PSM Auditing</li>
-                            <li>Layer of Protection Anlaysis Facilitation</li>
-                            <li>LOPA procedure develipoment
-SIL Allocation</li>
-                          </ul>
-                        </td>
-                      </tr>
-                    </table>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-box">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-name">
-                    Hazard Analysis
-                  </div>
-                  <div class="project-category">
-                    <table>
-                      <tr>
-                        <td>
-                          <ul> 
                             <li>HAZOP and PHA facilitation</li>
-                            <li>Fire, Explosion, and flammable and toxic vapor dispersion modeling</li>
-                            <li>HAZOP and PHA procedure development</li>
-
-                          </ul>
-                        </td>
-                        <td>
-                          <ul>
-                            <li>API 752 and 753 Facility Siting and Buildng Siting Studies</li>
-                            <li>Quantitative Risk  Analysis to determine compliance with corporate risk criteria</li>
+                            <li>Auditing</li>
+                            <li>Fire, Explosion, and flammable and toxic vapor modeling</li>
+							<li>Quantitative Risk Analysis</li>
                           </ul>
                         </td>
                       </tr>
                     </table>
                   </div>
-                </div>
-              </div>
-            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-box">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
+              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-sm-6 project-div">
                   <div class="project-name">
                     Engineering Consulting
                   </div>
@@ -307,61 +232,54 @@ SIL Allocation</li>
                       <tr>
                         <td>
                           <ul> 
-                            <li>PSV and flare header design</li>
                             <li>Management of Change Engineering Review</li>
                             <li>Legal case support</li>
-                            <li>Tier 1 and Tier 2 incident investigation</li>
+                            <li>SIS design and SIL verification</li>
                           </ul>
                         </td>
                         <td>
                           <ul>
-                            <li>Code Reviews for multiple NFPA, API, and CGA relvant processes</li>
-                            <li>PSV design and SIS design procedure development</li>
-                            <li>SIL verificaiton</li>
-                            <li>SIS design to meet specified SIL requirement</li>
+                            <li>Tier 1 and Tier 2 incident investigation and Root Cause Analysis</li>
+                            <li>PSV and flare header design</li>
+                            <li>Code Reviews for multiple NFPA, API, and CGA relevant processes</li>
                           </ul>
                         </td>
                       </tr>
                     </table>
                   </div>
-                </div>
-              </div>
-            </div>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-box">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
+              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          </div>
+          <div class="col-lg-4 col-sm-6 project-div">
                   <div class="project-name">
                     Data Analysis
                   </div>
                   <div class="project-category">
                     <table>
-                      <tr>  
+                      <tr>
                         <td>
                           <ul> 
-                            <li>Hazard Range visualization</li>
-                            <li>Failure rate calculation</li>
+                            <li>Hazard Range Visualization</li>
+                            <li>Failure Rate Calculation</li>
                             <li>Mechanical Integrity determination</li>
                           </ul>
                         </td>
                         <td>
                           <ul>
-                            <li>Proof Test interval determination</li>
-                            <li>Fault tree visualization</li>
+                            <li>Proof Test Interval determination</li>
+                            <li>Fault Tree visualization</li>
                             <li>Machine Learning</li>
-                            <li>Website scraping, data preparation, and analysis</li>
-
                           </ul>
                         </td>
                       </tr>
                     </table>
                   </div>
-                </div>
-              </div>
-            </div>
           </div>
+          <div class="col-lg-4 col-sm-6">
+              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+          </div>
+
         </div>
       </div>
     </section>
