--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
+          <ul id="navbar-nav" class="navbar-nav ml-auto navbar-nav-up">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
@@ -102,7 +102,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-book-open text-primary mb-3 sr-icons"></i>
-              <h5 class="mb-3">Process Safety Management</h5>
+              <h5 class="mb-3">Process Safety<br>Management</h5>
               <ul class="text-muted text-left mb-0">
                 <li>OSHA's PSM program development</li>
                 <li>Safety Integrity Level (SIL) Allocation</li>
@@ -113,7 +113,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-fire text-primary mb-3 sr-icons"></i>
-              <h5 class="mb-3">Hazard Analysis</h5>
+              <h5 class="mb-3">Hazard<br>Analysis</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Process Hazard Analysis (PHA)</li>
                 <li>Hazard and Operability Study (HAZOP)</li>
@@ -124,7 +124,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-drafting-compass text-primary mb-3 sr-icons"></i>
-              <h5 class="mb-3">Engineering Consulting</h5>
+              <h5 class="mb-3">Engineering<br>Consulting</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Legal Expert</li>
                 <li>PSV design</li>
@@ -137,7 +137,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="far fa-4x fa-chart-bar text-primary mb-3 sr-icons"></i>
-              <h5 class="mb-3">Data Analysis</h5>
+              <h5 class="mb-3">Data<br>Analysis</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Hazard Range visualization</li>
                 <li>Failure rate and mechanical integrity determination</li>
@@ -318,7 +318,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Custom scripts for this template -->
-    <script src="js/creative.min.js"></script>
+    <script src="js/creative.js"></script>
 
   </body>
 
