--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
       </div>
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-4 col-md-6">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
           </div>
-          <div class="col-lg-4 col-sm-6 project-div">
+          <div class="col-lg-4 col-md-6 project-div">
                   <div class="project-name">
                     Plant and Process Experience
                   </div>
@@ -190,10 +190,10 @@
                     </table>
                   </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-4 col-md-6">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
           </div>
-          <div class="col-lg-4 col-sm-6 project-div">
+          <div class="col-lg-4 col-md-6 project-div">
                   <div class="project-name">
                     Process Safety Management
                   </div>
@@ -220,10 +220,10 @@
                     </table>
                   </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-4 col-md-6">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
           </div>
-          <div class="col-lg-4 col-sm-6 project-div">
+          <div class="col-lg-4 col-md-6 project-div">
                   <div class="project-name">
                     Engineering Consulting
                   </div>
@@ -248,10 +248,10 @@
                     </table>
                   </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-4 col-md-6">
               <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
           </div>
-          <div class="col-lg-4 col-sm-6 project-div">
+          <div class="col-lg-4 col-md-6 project-div">
                   <div class="project-name">
                     Data Analysis
                   </div>
