--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope fa-3x mb-3 sr-contact"></i>
             <p>
-              <a href="mailto:kmwerts@gmail.com">kmwerts@gmail.com</a>
+              <a href="mailto:info@ryskconsulting.com">info@ryskconsulting.com</a>
             </p>
           </div>
         </div>
