--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </nav>
 
     <header class="masthead text-center text-white d-flex">
-      <div class="container my-auto">
-        <div class="row">
+      <div class="container my-auto title-div-wrapper">
+        <div class="row title-div">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
               <strong>RYSK Consulting</strong>
@@ -64,7 +64,7 @@
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <div class = "boxed">
+            <div class = "fadedbox">
             <p class="strong mb-5">Process Safety <small><i class="fas fa-circle fa-xs"></i></small> Engineering <small><i class="fas fa-circle fa-xs"></i></small> Data Analysis</p>
             </div>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
