--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div>
       <div class="container-fluid p-0">
         <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 project-div">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
           </div>
           <div class="col-lg-4 col-md-6 project-div">
@@ -190,7 +190,7 @@
                     </table>
                   </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 project-div">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
           </div>
           <div class="col-lg-4 col-md-6 project-div">
@@ -220,7 +220,7 @@
                     </table>
                   </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 project-div">
               <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
           </div>
           <div class="col-lg-4 col-md-6 project-div">
@@ -248,7 +248,7 @@
                     </table>
                   </div>
           </div>
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 project-div">
               <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
           </div>
           <div class="col-lg-4 col-md-6 project-div">
@@ -276,7 +276,7 @@
                     </table>
                   </div>
           </div>
-          <div class="col-lg-4 col-sm-6">
+          <div class="col-lg-4 col-sm-6 project-div">
               <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
           </div>
 
