--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>
       </div>
       <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
+        <div class="row no-gutters popup-gallery" style="justify-content: center;">
           <div class="col-lg-4 col-md-6 project-div">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
           </div>
