--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <div class = "fadedbox">
-            <p class="strong mb-5">Process Safety <small><i class="fas fa-circle fa-xs"></i></small> Engineering <small><i class="fas fa-circle fa-xs"></i></small> Data Analysis</p>
+            <p class="strong mb-5">Process Safety &nbsp; &nbsp; <small><i class="fas fa-circle fa-xs"></i></small> &nbsp; &nbsp; Engineering &nbsp; &nbsp; <small><i class="fas fa-circle fa-xs"></i></small> &nbsp; &nbsp; Data Analysis</p>
             </div>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
