--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <ul class="text-muted text-left mb-0">
                 <li>OSHA's PSM program development</li>
                 <li>Safety Integrity Level (SIL) Allocation</li>
-                <li>SIL verifcation</li>
+                <li>SIL verification</li>
                 <li>Auditing</li></ul>
             </div>
           </div>
@@ -117,7 +117,6 @@
               <ul class="text-muted text-left mb-0">
                 <li>Process Hazard Analysis (PHA)</li>
                 <li>Hazard and Operability Study (HAZOP)</li>
-                <li>Layer of Protection Analysis (LOPA)</li>
                 <li>Hazard (fire and explosion) modeling</li></ul>
             </div>
           </div>
@@ -127,11 +126,11 @@
               <h5 class="mb-3">Engineering<br>Consulting</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Legal Expert</li>
-                <li>PSV design</li>
                 <li>Management of Change</li>
                 <li>Incident Investigation</li>
                 <li>Code Review</li>
                 <li>SIS design</li></ul>
+		<li>Layer of Protection Analysis (LOPA)</li>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
