--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
                 <li>Management of Change</li>
                 <li>Incident Investigation</li>
                 <li>Code Review</li>
-                <li>SIS design</li></ul>
+                <li>SIS design</li>
 		<li>Layer of Protection Analysis (LOPA)</li>
+	      </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
