--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">RYSK Consulting</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" 
+		data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" 
+		aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -65,7 +67,13 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <div class = "fadedbox">
-            <p class="strong mb-5">Process Safety &nbsp; &nbsp; <small><i class="fas fa-circle fa-xs"></i></small> &nbsp; &nbsp; Engineering &nbsp; &nbsp; <small><i class="fas fa-circle fa-xs"></i></small> &nbsp; &nbsp; Data Analysis</p>
+            <p class="strong mb-5">
+		    Process Safety &nbsp; &nbsp; 
+		    <small><i class="fas fa-circle fa-xs"></i></small> 
+		    &nbsp; &nbsp; Engineering &nbsp; &nbsp; 
+		    <small><i class="fas fa-circle fa-xs"></i></small> 
+		    &nbsp; &nbsp; Software Development
+	    </p>
             </div>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
@@ -79,7 +87,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We can find a solution.</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">RYSK Consulting is an engineering, safety, and data analysis consulting company based in Tulsa, OK. We have done work all over the world on a wide variety of plants and processes.</p>
+            <p class="text-faded mb-4">RYSK Consulting is an engineering, safety, and software development consulting company based in Tulsa, OK. We have done work all over the world on a wide variety of plants and processes.</p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">
               What we do
             </a>
@@ -137,10 +145,10 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="far fa-4x fa-chart-bar text-primary mb-3 sr-icons"></i>
-              <h5 class="mb-3">Data<br>Analysis</h5>
+              <h5 class="mb-3">Software<br>Development</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Hazard Range visualization</li>
-                <li>Failure rate and mechanical integrity determination</li>
+	      	<li>PHA software</li>
                 <li>Data visualization</li>
                 <li>Machine Learning</li></ul>
             </div>
