--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
                             <li>Management of Change Engineering Review</li>
                             <li>Legal case support</li>
                             <li>SIS design and SIL verification</li>
+			    <li>Proof Test interval detremination</li>
                           </ul>
                         </td>
                         <td>
@@ -261,7 +262,7 @@
           </div>
           <div class="col-lg-4 col-md-6 project-div">
                   <div class="project-name">
-                    Data Analysis
+                    Software Development
                   </div>
                   <div class="project-category">
                     <table>
@@ -270,12 +271,12 @@
                           <ul> 
                             <li>Hazard Range Visualization</li>
                             <li>Failure Rate Calculation</li>
-                            <li>Mechanical Integrity determination</li>
+                            <li>html, css, javacsript, python, C, C++</li>
                           </ul>
                         </td>
                         <td>
                           <ul>
-                            <li>Proof Test Interval determination</li>
+                            <li>Open Source contributions</li>
                             <li>Fault Tree visualization</li>
                             <li>Machine Learning</li>
                           </ul>
