--- a/index.html
+++ b/index.html
@@ -118,17 +118,6 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fas fa-4x fa-book-open text-primary mb-3 sr-icons"></i>
-              <h5 class="mb-3">Process Safety<br>Management</h5>
-              <ul class="text-muted text-left mb-0">
-                <li>OSHA's PSM program development</li>
-                <li>Safety Integrity Level (SIL) Allocation</li>
-                <li>SIL verification</li>
-                <li>Auditing</li></ul>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-fire text-primary mb-3 sr-icons"></i>
               <h5 class="mb-3">Hazard<br>Analysis</h5>
               <ul class="text-muted text-left mb-0">
@@ -139,14 +128,22 @@
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
+              <i class="fas fa-4x fa-book-open text-primary mb-3 sr-icons"></i>
+              <h5 class="mb-3">Process Safety<br>Management</h5>
+              <ul class="text-muted text-left mb-0">
+                <li>OSHA's PSM program development</li>
+                <li>Safety Integrity Level (SIL) Study</li>
+                <li>Auditing</li></ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 text-center">
+            <div class="service-box mt-5 mx-auto">
               <i class="fa fa-4x fa-drafting-compass text-primary mb-3 sr-icons"></i>
               <h5 class="mb-3">Engineering<br>Consulting</h5>
               <ul class="text-muted text-left mb-0">
                 <li>Legal Expert</li>
                 <li>Management of Change</li>
                 <li>Incident Investigation</li>
-                <li>Code Review</li>
-                <li>SIS design</li>
 		<li>Layer of Protection Analysis (LOPA)</li>
 	      </ul>
             </div>
